--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CodingPhase Starter Kit</title>
+  <title>Real Easy | Listing Real Estate the Basic Way</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="C:\Users\admin\Desktop\projects\realEstateWebsite\public\css\styles.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
