--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <title>Real Easy | Listing Real Estate the Basic Way</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://burnsvaughan.com/realEstateWebsite/css/styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
   <div id="app"> </div>
-  <script src="js/dist/vendors~realEstate.js"></script>
-  <script src="js/dist/realEstate.js"></script>
+  <script src="public/js/dist/vendors~realEstate.js"></script>
+  <script src="public/js/dist/realEstate.js"></script>
   
 </body>
 
